remove ImmutableList usage from SampleGenotype & SampleGenotypeTest